syntax = "proto3";

import "ferrors/v1/ferrors.proto";
import "telempb/telem.proto";

package api.v1;


message Frame {
    repeated uint32 keys = 1;
    repeated telempb.Series series = 2;
}

service FrameService {
    rpc Iterate(stream FrameIteratorRequest) returns (stream FrameIteratorResponse) {}
    rpc Write(stream FrameWriterRequest) returns (stream FrameWriterResponse) {}
    rpc Stream(stream FrameStreamerRequest) returns (stream FrameStreamerResponse) {}
}

message FrameIteratorRequest {
    int32 command = 1;
    int64 span = 2;
    telempb.TimeRange range = 3;
    int64 stamp = 4;
    repeated uint32 keys = 5;
}

message FrameIteratorResponse {
    int32 variant = 1;
    int32 command = 2;
    Frame frame = 3;
    int32 node_key = 43;
    bool ack = 5;
    int32 seq_num = 6;
    ferrors.v1.ErrorPayload error = 7;
}

message FrameWriterConfig {
    repeated uint32 keys = 1;
    repeated uint32 authorities = 2;
    int64 start = 3;
    ControlSubject control_subject = 4;
}

message ControlSubject {
    string key = 1;
    string name = 2;
}

message FrameWriterRequest {
    int32 command = 1;
    FrameWriterConfig config = 2;
    Frame frame = 3;
}

message FrameWriterResponse {
    int32 command = 1;
    bool ack = 2;
    int32 node_key = 3;
    int32 counter = 4;
    ferrors.v1.ErrorPayload error = 5;
    int64 end = 6;
}

message FrameStreamerRequest {
    int64 start = 1;
    repeated uint32 keys = 2;
}

message FrameStreamerResponse {
    Frame frame = 1;
    ferrors.v1.ErrorPayload error = 2;
}
